drugi push - struktura i nawigacja bez styli

--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <style>
+               @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700;800&display=swap');
+    </style>
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-
+    <header class="header">
+        <div class="header__container container">
+                <a href="#" class="logo">BestShop</a>
+                <nav>
+                    <ul class="header__nav">
+                        <li class="nav__link">
+                            <a href="#why-us" class="nav__link">why us</a>
+                        </li>
+                        <li class="nav__link">
+                            <a href="#benefits" class="nav__link">benefits</a>
+                        </li>
+                        <li class="nav__link">
+                            <a href="#why-us" class="nav__link"></a>
+                        </li>
+                    </ul>
+                </nav>
         </div>
     </header>
 </body>
