sekcja nav skonczona

--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
                 <a href="#" class="logo">BestShop</a>
                 <nav>
                     <ul class="header__nav">
-                        <li class="nav__link">
+                        <li class="nav__element">
                             <a href="#why-us" class="nav__link">why us</a>
                         </li>
-                        <li class="nav__link">
+                        <li class="nav__element">
                             <a href="#benefits" class="nav__link">benefits</a>
                         </li>
-                        <li class="nav__link">
-                            <a href="#why-us" class="nav__link"></a>
+                        <li class="nav__element">
+                            <a href="#prices" class="nav__link">prices</a>
+                        </li>
+                        <li class="nav__element">
+                            <a href="#contact" class="nav__link">contact</a>
                         </li>
                     </ul>
                 </nav>
