sekcja opening prawie- skonczona

--- a/index.html
+++ b/index.html
@@ -32,5 +32,15 @@
                 </nav>
         </div>
     </header>
+    <main>
+    <section class="opener">
+        <div class="opener_box">
+            <h1 class="opener_header">Sell More!</h1>
+            <p class="opener_text">Open shop on our platform and increase your sales</p>
+            <a href="#" class="btn btn--primary btn--large">Open your shop</a>
+        </div>
+        <img src="../best-shop-rep/assets/Background.png" class="opener__background" alt="">
+    </section>
+    </main>
 </body>
 </html>
